# encoding-utils

./: Cargo.toml  README.md  sections.toml
.cargo/: config.toml
encoding_utils_lib/: Cargo.toml
encoding_utils_lib/src/: chapters.rs  chunk.rs  crf.rs  encode.rs  frame_loop.rs  frames.rs  lib.rs  main_loop.rs  math.rs  scenes.rs  ssimulacra2.rs  vapoursynth.rs  vpy_files.rs  zones.rs
encoding_utils_lib/src/dampen/: chunks.rs  dampen_loop.rs  done.rs  mod.rs
encoding_utils_lib/src/transnetv2/: extract_frames.rs  inference.rs  mod.rs  onnx.rs  transnet.rs
frame-boost/: Cargo.toml  readme.md
frame-boost/src/: main.rs
hard-to-soft/: Cargo.toml
hard-to-soft/src/: crop_extract.rs  lib.rs  main.rs  ocr.rs  sections.rs
simple-ssimu2/: Cargo.toml  readme.md
simple-ssimu2/src/: main.rs
size-dampener/: Cargo.toml
size-dampener/src/: main copy.rs  main.rs
transnetv2-rs/: Cargo.toml  readme.md
transnetv2-rs/license/: LICENSE
transnetv2-rs/src/: extract_frames.rs  interferance.rs  main.rs  onnx.rs  transnet.rs
transnetv2_rs/: Cargo.toml
transnetv2_rs/src/: extract_frames.rs  interferance.rs  lib.rs  main.rs  onnx.rs  transnet.rs
vpy-files/: Cargo.toml
vpy-files/src/: main.rs
vpy_files/: Cargo.toml
vpy_files/src/: main.rs
