[package]
name = "encoding_utils_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
vapoursynth4-rs.workspace = true
clap.workspace = true
indicatif.workspace = true
quill.workspace = true


[lib]
name = "encoding_utils_lib"
path = "src/lib.rs"
