[package]
name = "encoding_utils_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
vapoursynth4-rs.workspace = true
clap.workspace = true
indicatif.workspace = true
quill.workspace = true
ndarray.workspace = true
itertools.workspace = true
tempfile.workspace = true
iter-chunks.workspace = true
bytesize.workspace = true
fs_extra.workspace = true
quick-xml.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "=2.0.0-rc.10", features = ["coreml"] }

[target.'cfg(windows)'.dependencies]
ort = { version = "=2.0.0-rc.10", features = ["cuda", "tensorrt", "directml"] }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
ort = { version = "=2.0.0-rc.10", features = ["cuda", "tensorrt", "rocm"] }


[lib]
name = "encoding_utils_lib"
path = "src/lib.rs"
