[package]
name = "hard-to-soft"
version = "0.1.0"
edition = "2024"

[dependencies]
encoding_utils_lib = { path = "../encoding_utils_lib" }
eyre.workspace = true
clap.workspace = true
vapoursynth4-rs.workspace = true
rayon.workspace = true
toml = "0.8.23"
serde = { workspace = true, features = ["derive"] }
