[package]
name = "transnetv2-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
vapoursynth4-rs = { workspace = true }
encoding_utils_lib = { path = "../encoding_utils_lib" }
eyre.workspace = true
clap.workspace = true
indicatif.workspace = true
ndarray.workspace = true
itertools.workspace = true
tempfile.workspace = true
rayon.workspace = true
iter-chunks.workspace = true

